feat: improve DNS table display for Worker and read-only records
- 对于meta中包含origin_worker_id的DNS记录，类型显示为Worker，值显示为空白
- 对于meta中包含read_only: true的记录，禁用Edit按钮
- 更新页面标题

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Dashflare | Sukka</title>
+    <title>Dashflare</title>
     <link href="favicon.ico" rel="icon" type="image/ico">
     <meta name="format-detection" content="telephone=no">
 </head>
