--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dashflare</title>
-    <link href="favicon.ico" rel="icon" type="image/ico">
+    <link href="/favicon.ico" rel="icon" type="image/ico">
     <meta name="format-detection" content="telephone=no">
 </head>
 
